Use official postgres image

--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         ipv4_address: $APP_INVIDIOUS_IP
 
   postgres:
-    image: ceramicwhite/invidious-postgres:v13.7@sha256:c00e3e0d05cfb2c2338c6c4a58eecb132817ae6893f1cceab361e6b3ff92a537
+    image: postgres:13.7@sha256:03652c675ae177af98ddd50f9f4b4b2cf8ad38d0e116aa68fe670fbc2cf250fc
     restart: on-failure
     user: "1000:1000"
     stop_grace_period: 1m
@@ -50,4 +50,3 @@ services:
     networks:
       default:
         ipv4_address: $APP_INVIDIOUS_DB_IP
-        
