--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         admins: ["umbrel"]
         default_user_preferences:
           feed_menu: ["Trending", "Subscriptions", "Playlists"]
-          default_home: Search
+          default_home: Trending
     healthcheck:
       disable: true
     depends_on:
