--- a/invidious/umbrel-app.yml
+++ b/invidious/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: invidious
 category: Social
 name: Invidious
-version: "0.20.1"
+version: "2022.09.08-53fb6ad"
 tagline: Invidious is an alternative front-end to YouTube
 description: >-
   An open source alternative front-end to YouTube
