--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -7,12 +7,11 @@ services:
   web:
     # Official Nim image used as base image for nitter doesn't offer Arm variant so using a custom image w/ patch for umbrel
     # https://github.com/ceramicwhite/umbrel-patch-ci/blob/master/nitter/umbrel.patch
-    image: ceramicwhite/nitter:build-20220906@sha256:6ddb53fe66846ffcded344d1919bee3149b705f04a9347c37b8eaa562695ce81
+    image: ceramicwhite/nitter:build-20220908@sha256:cfb1227aca5014804c47d10d7ff77f24416a3fd571549eaeee9850f915507447
     restart: on-failure
     stop_grace_period: 1m
     init: true
-    # app is run with su-exec to drop privileges to a non-root user
-    #user: "1000:1000"
+    user: 1000:1000
     environment:
       REDIS_HOST: "${APP_NITTER_REDIS_IP}"
       REDIS_PASS: "moneyprintergobrrr"
@@ -27,9 +26,9 @@ services:
   
   redis:
     image: redis:6.2.2-buster@sha256:e10f55f92478715698a2cef97c2bbdc48df2a05081edd884938903aa60df6396
-    user: "1000:1000"
-    restart: "on-failure"
+    restart: on-failure
     stop_grace_period: 1m
+    user: 1000:1000
     command: "redis-server --save 60 1 --loglevel warning --requirepass moneyprintergobrrr"
     volumes:
       - ${APP_DATA_DIR}/data/redis:/data
