--- a/invidious/umbrel-app.yml
+++ b/invidious/umbrel-app.yml
@@ -3,12 +3,12 @@ id: invidious
 category: Social
 name: Invidious
 version: "2022.09.08-53fb6ad"
-tagline: Invidious is an alternative front-end to YouTube
+tagline: Browse YouTube without tracking or ads
 description: >-
   An open source alternative front-end to YouTube
 
 
-  User Features
+  User Features:
    - Lightweight
    - No ads
    - No tracking
@@ -21,13 +21,13 @@ description: >-
    - Support for Reddit comments
    - Available in many languages, thanks to our translators
 
-  Data Import/Export
+  Data Import/Export:
    - Import subscriptions from YouTube, NewPipe and Freetube
    - Import watch history from NewPipe
    - Export subscriptions to NewPipe and Freetube
    - Import/Export Invidious user data
   
-  Technical features
+  Technical features:
    - Embedded video support
    - Developer API
    - Does not use official YouTube APIs
