--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_NITTER_IP
+      APP_HOST: nitter_web_1
       APP_PORT: 8080
 
   web:
@@ -13,16 +13,13 @@ services:
     init: true
     user: 1000:1000
     environment:
-      REDIS_HOST: "${APP_NITTER_REDIS_IP}"
+      REDIS_HOST: "nitter_redis_1"
       REDIS_PASS: "moneyprintergobrrr"
       NITTER_THEME: "auto_(twitter)"
     volumes:
       - ${APP_DATA_DIR}/data/nitter:/data
     depends_on:
       - redis
-    networks:
-      default:
-        ipv4_address: $APP_NITTER_IP
   
   redis:
     image: redis:6.2.2-buster@sha256:e10f55f92478715698a2cef97c2bbdc48df2a05081edd884938903aa60df6396
@@ -32,6 +29,3 @@ services:
     command: "redis-server --save 60 1 --loglevel warning --requirepass moneyprintergobrrr"
     volumes:
       - ${APP_DATA_DIR}/data/redis:/data
-    networks:
-      default:
-        ipv4_address: $APP_NITTER_REDIS_IP
