--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       REDIS_HOST: "nitter_redis_1"
       REDIS_PASS: "moneyprintergobrrr"
-      NITTER_THEME: "auto_(twitter)"
+      NITTER_THEME: '"auto_(twitter)"'
     volumes:
       - ${APP_DATA_DIR}/data/nitter:/data
     depends_on:
