Set path to /admin/

--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -26,7 +26,7 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-path: ""
+path: "/admin/"
 defaultUsername: ""
 deterministicPassword: true
 torOnly: false
