--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: nextcloud
 category: Files
 name: Nextcloud
-version: "22.1.1-build-2"
+version: "24.0.5"
 tagline: Productivity platform that keeps you in control
 description: >-
   Nextcloud puts your data at your fingertips, under your control.
@@ -25,7 +25,7 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  - This update resolves an issue that made Nextcloud inaccessible when accessed via your Umbrel's IP address.
+  - Nextcloud 24 brings lots of exciting new features and bug fixes, see here for more details: https://nextcloud.com/changelog/#latest24
 developer: Nextcloud GmbH
 website: https://nextcloud.com
 dependencies: []
