--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - 53:53
       - 53:53/udp
+      - 67:67/udp
     volumes:
       - ${APP_DATA_DIR}/data/pihole:/etc/pihole/
       - ${APP_DATA_DIR}/data/dnsmasq:/etc/dnsmasq.d/
@@ -24,3 +25,5 @@ services:
     networks:
       default:
         ipv4_address: $APP_PI_HOLE_IP
+    cap_add:
+      - NET_ADMIN
