--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -25,7 +25,7 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  - This release fixes a bug where your Nextcloud instance is inaccessible via your Umbrel's IP address.
+  - This release fixes a critical bug in Nextcloud.
 developer: Nextcloud GmbH
 website: https://nextcloud.com
 dependencies: []
