--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: Networking
 name: Tailscale
-version: "1.26.2-build-2"
+version: "1.30.1"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -27,3 +27,6 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+releaseNotes: >
+fix exit-nodes in --tun=userspace-networking mode with no IPv6 connectivity to not break Chrome 104+
+fix SIGINT when running in a container without job control
