--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3002
 
   web:
-    image: bitcoinscala/wallet-server-ui:1.9.3@sha256:dfbded611403fb03dac45fe915320079933e8f864e0942b7fb3ddea017e2b8dd
+    image: bitcoinscala/wallet-server-ui:1.9.4
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.3@sha256:db995d23ed6cd5a31de5fffe06c6edff5c420c77b63440169c41c2016c89993c
+    image: bitcoinscala/bitcoin-s-server:1.9.4
     entrypoint: ["/opt/docker/bin/bitcoin-s-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]
     user: "1000:1000"
     restart: on-failure
