Update suredbits wallet to 1.9.4

--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: suredbits-wallet
 category: Finance
 name: Suredbits Wallet
-version: "1.9.3"
+version: "1.9.4"
 tagline: A universal DLC wallet
 description: >-
   The Suredbits Wallet is your one stop shop for building Discreet
@@ -14,9 +14,9 @@ description: >-
 
   WARNING: This is an Alpha software, don't put too much money in.
 releaseNotes: >
-  Websocket events for fee rate changes, rescans, blockchain sync
-  
-  Optimizations for the DLC wallet
+  Adds connection checks for tor
+  Add bug fixes for the dlc wallet
+  Optimize startup time for the app
 developer: Suredbits
 website: https://suredbits.com
 dependencies:
