Update to 1.9.4 on krystal bull

--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -18,7 +18,7 @@ description: >-
 
   WARNING: This version of Krystal Bull is an early alpha release for testing. It's not secure, please don't use it for anything serious.
 releaseNotes: >-
-  Export staking address private key
+  Update to the 1.9.4 release of bitcoin-s
 
 developer: SuredBits
 website: https://suredbits.com/
