Add bullet points

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,6 +28,6 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  Fix exit-nodes in --tun=userspace-networking mode with no IPv6 connectivity to not break Chrome 104+
-  
-  Fix SIGINT when running in a container without job control
+  - Fix exit-nodes in --tun=userspace-networking mode with no IPv6 connectivity to not break Chrome 104+
+
+  - Fix SIGINT when running in a container without job control
