--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: krystal-bull
 category: Finance
 name: Krystal Bull
-version: "1.9.3"
+version: "1.9.4"
 tagline: Become an oracle and create Bitcoin bets
 description: >-
   Krystal Bull allows you to become a Bitcoin oracle. An oracle
@@ -18,7 +18,7 @@ description: >-
 
   WARNING: This version of Krystal Bull is an early alpha release for testing. It's not secure, please don't use it for anything serious.
 releaseNotes: >-
-  Export staking address private key
+  Update to the 1.9.4 release of bitcoin-s
 
 developer: SuredBits
 website: https://suredbits.com/
