Add bullet points

--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -14,11 +14,11 @@ description: >-
 
   WARNING: This is an Alpha software, don't put too much money in.
 releaseNotes: >
-  Adds connection checks for tor
+  - Adds connection checks for tor
 
-  Add bug fixes for the dlc wallet
+  - Add bug fixes for the dlc wallet
 
-  Optimize startup time for the app
+  - Optimize startup time for the app
 
 developer: Suredbits
 website: https://suredbits.com
