--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   app_proxy:
     environment:
-      APP_HOST: <web-container-ip-address>
-      APP_PORT: <web-container-port-number>
+      APP_HOST: $APP_TDEX_CONNECT_IP
+      APP_PORT: $APP_TDEX_CONNECT_PORT
   
   tdexd:
     container_name: "tdexd"
