--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -49,3 +49,6 @@ gallery:
 path: ""
 defaultUsername: ""
 deterministicPassword: true
+releaseNotes: >-
+  This release of Lightning Terminal (LiT) includes updates to the
+  versions of the packaged subsystems including LND, Loop and Pool.
