Add LND version requirement to releaseNotes

--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -50,5 +50,8 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
+  Lightning v0.15.1-beta is required for this to function!
+
+
   This release of Lightning Terminal (LiT) includes updates to the
   versions of the packaged subsystems including LND, Loop and Pool.
