--- a/libreddit/docker-compose.yml
+++ b/libreddit/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_LIBREDDIT_IP
-      APP_PORT: $APP_LIBREDDIT_PORT
+      APP_HOST: libreddit_web_1
+      APP_PORT: 7420
 
   web:
     image: ceramicwhite/libreddit:0.22.9@sha256:00a133da4ae8eb1b7d3ce9af0ca387e2dd929dc6b490736532b5d998a025c362
@@ -13,9 +13,6 @@ services:
     init: true
     user: "1000:1000"
     environment:
-      PORT: $APP_LIBREDDIT_PORT
+      PORT: 7420
     healthcheck:
       disable: true
-    networks:
-      default:
-        ipv4_address: $APP_LIBREDDIT_IP
