--- a/woofbot/umbrel-app.yml
+++ b/woofbot/umbrel-app.yml
@@ -21,3 +21,9 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  - New feature - Get notified when the mempool is cleared
+
+  - Fixed a critical bug when watching addresses
+
+  - Minor UX changes
