--- a/woofbot/umbrel-app.yml
+++ b/woofbot/umbrel-app.yml
@@ -22,8 +22,8 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - New feature - Get notified when the mempool is cleared
+  - New feature: Get notified when the mempool is cleared
 
-  - Fixed a critical bug when watching addresses
+  - Bugfix: Due to Bitcoin RPC API changes, we now read a different address field
 
   - Minor UX changes
