--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: Networking
 name: Tailscale
-version: "1.30.1"
+version: "1.30.2"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,6 +28,6 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  - Fix exit-nodes in --tun=userspace-networking mode with no IPv6 connectivity to not break Chrome 104+
+  - Fix IPv6-mapped-IPv4 addresses in STUN responses
 
-  - Fix SIGINT when running in a container without job control
+  - Better container detection
