--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -3,7 +3,7 @@ id: jam
 category: Finance
 name: Jam
 version: "0.1.0"
-tagline: A user-friendly UI for JoinMarket
+tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
   user-friendliness.
