Provide url for full changelog in releaseNotes

--- a/home-assistant/umbrel-app.yml
+++ b/home-assistant/umbrel-app.yml
@@ -32,3 +32,5 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
+releaseNotes: >-
+  Full changelog (for 2022.9) can found at: https://www.home-assistant.io/changelogs/core-2022.9
