fix review comments

--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -3,7 +3,7 @@ id: tdex
 category: Finance
 name: TDEX Provider
 version: "0.8.15"
-tagline: Provider liquidity on the TDEX Network, an open protocol to trade Liquid Network assets.
+tagline: Provide liquidity on the TDEX Network, an open protocol to trade Liquid Network assets.
 description: >-
   A Provider holds Liquid reserves of both a BASE_ASSET-QUOTE_ASSET in his non-custodial Liquid hot-wallet, running automated market-making strategies, either with or without an oracle. Providers are incentivized to be always on and need to expose a public reachable endpoint either via clearnet or using a Onion hidden service
 
