add dir torrc.template

--- a/tdex/torrc.template
+++ b/tdex/torrc.template
@@ -1,5 +1,7 @@
 # TDEX Public Trader Interface Hidden Service
+HiddenServiceDir /tdex-data/app-$APP_ID-daemon
 HiddenServicePort $APP_TDEXD_PORT $APP_TDEXD_IP:$APP_TDEXD_PORT
 
 # Dashboard Frontend Hidden Service
+HiddenServiceDir /tdex-data/app-$APP_ID-dashboard
 HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
