daemon TDEX_CONNECT_ADDR must be euqal to dash TDEX_DAEMON_URL

--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       TDEX_OPERATOR_LISTENING_PORT: 9090
       TDEX_TRADE_LISTENING_PORT:  9090
       TDEX_NO_OPERATOR_TLS: "true"
-      TDEX_CONNECT_ADDR: "$DEVICE_HOSTNAME:9090"
+      TDEX_CONNECT_ADDR: "tdexd:9090"
       TDEX_CONNECT_PROTO: http
 
   dashboard:
