Add releaseNotes to yaml

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -27,3 +27,13 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+   - Bugfix: Important payment logic fix
+   - Bugfix: pending (stuck) payment fix
+   - Bugfix: Reuse DB connections for faster boot
+   - New Feature: Onchain Wallet, includes support for HWW connected over serial https://lnbits.github.io/hardware-wallet/installer/
+   - New Feature: Boltcard Extension, create and manage LNURL tap and pay NFC cards
+   - New Feature: Invoices, Extension for creating formal invoices tor goods/services
+   - New Feature: Onchain Wallet (formally known as Watch Only), scrapes for funds and gives total balance + allow psbt construction
+   - New Feature: SCRUB extension, pushes payments going to a wallet to an LNURLpay or LNaddress
+   - New Feature: Point of Sale extension can now accept tips
