Update robosats to v0.2.0-alpha

--- a/robosats/docker-compose.yml
+++ b/robosats/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: ${APP_ROBOSATS_PORT}
 
   web:
-    image: recksato/robosats-client:7083423@sha256:289f47608f2a325cbd7560d3f43f2bcb16ff57edc492ba65867c81f54d48fb38
+    image: recksato/robosats-client:v0.2.0-alpha@sha256:5c1609bf2e22ecba5a0992fe3e44ed2ee945df53920ccc789b8d96b07b84bd1c
     restart: on-failure
     stop_grace_period: 1m
     init: true
