Add link to changelogs

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -34,9 +34,7 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
-  RoboSats is now available on Umbrel!
-
-  You can now use your WebLN compatible wallet with RoboSats.
+  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/releases/tag/v0.2.0-alpha
 developer: RoboSats
 website: https://learn.robosats.com
 dependencies: []
