--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -30,3 +30,27 @@ path: "/admin/"
 defaultUsername: ""
 deterministicPassword: true
 torOnly: false
+releaseNotes: >-
+What's Changed
+Remove old test dependencies, updated ones still being used. Introduce Black formatter by @lightswitch05 in #1210
+Full Changelog: 2022.09.3...2022.09.4
+
+Also includes Pi-hole FTL v5.18.1, Web v5.15.1. and Core v5.12.2
+What’s Changed (FTL)
+Only log disk space warning when usage increased by @yubiuser in pi-hole/FTL#1437
+Fix handling of dnssec-retry queries. by @DL6ER in pi-hole/FTL#1438
+Full Changelog: pi-hole/FTL@v5.18...v5.18.1
+
+What’s Changed (Web)
+Fix glitch of password manager button in dark themes (macOS Safari) by @Iksas in pi-hole/AdminLTE#2354
+Reverse logic of in/exlcuding queries from long-term database and rename queryType => statusType by @yubiuser in pi-hole/AdminLTE#2338
+Read DOCKER_VERSION from version file instead of env variable by @yubiuser in pi-hole/AdminLTE#2356
+Avoid PHP warning in groups.php when adding a domain by @rdwebdesign in pi-hole/AdminLTE#2357
+Update Dashboard and Login Screen images by @rdwebdesign in pi-hole/AdminLTE#2358
+Full Changelog: pi-hole/AdminLTE@v5.15...v5.15.1
+
+What’s Changed (Core)
+Store docker version in versions file (If PIHOLE_DOCKER_TAG variable is set) by @PromoFaux in pi-hole/pi-hole#4913
+Fixing texts forgotten after Blocking Page removal by @rdwebdesign in pi-hole/pi-hole#4915
+Add comment in lighttpd.conf how to change the server port by @yubiuser in pi-hole/pi-hole#4917
+Fix gravity database integrity check by @yubiuser in pi-hole/pi-hole#4921
