Cleanup releaseNotes a little bit

--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -28,9 +28,8 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-
   - Feature: amboss balances and view @apotdevin (#476)
   
-  - minor bugfixes
+  - Minor bugfixes
   
   - Full changelog can be found here: https://github.com/apotdevin/thunderhub/releases/tag/v0.13.16
