--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
   server:
-    image: pihole/pihole:2022.09.2@sha256:58885428b079ebb4adcf543c56f050ce26094a3f1cfe897104e2626728378648
+    image: image: pihole/pihole:2022.09.4@sha256:aa6140856dfc67f3ae36c352e30903f944e4e220699ffeeaf6b85235b2d84c95
     # Pi-hole doesn't currently support running as non-root
     # https://github.com/pi-hole/docker-pi-hole/issues/685
     # user: "1000:1000"
