Add empty dependencies prop.

--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -12,6 +12,7 @@ description: >-
   A liquidity provider has full control over the market making strategy to apply needed to calculate the market rate at which to accept trades. That being said, there is a possibility to apply an automated market-making relying only on the reserves balances and the amount requested by the trader, without the need to connect to an external price feed. The default strategy of the alpha daemond is the constant product market-making. In short, this model generates a full order-book based on an initial price for the market. Every transaction that occurs on this market will adjust the prices of the market accordingly. It's a basic supply and demand automated market making system. 
 releaseNotes: >-
   - New Dashboard!
+dependencies: []
 developer: TDEX Network developers
 website: https://dev.tdex.network
 repo: https://github.com/tdex-network/tdex-daemon
