--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -30,3 +30,5 @@ path: "/admin/"
 defaultUsername: ""
 deterministicPassword: true
 torOnly: false
+releaseNotes: >-
+  - Various internal improvements
