--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: pi-hole
 category: Networking
 name: Pi-hole
-version: "2022.09.2"
+version: "2022.09.4"
 tagline: Block ads on your entire network
 description: >-
   Instead of browser plugins or other software on each computer,
@@ -30,3 +30,5 @@ path: "/admin/"
 defaultUsername: ""
 deterministicPassword: true
 torOnly: false
+releaseNotes: >-
+  - Various internal improvements
