--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: core-lightning-rtl
 category: Lightning Node Management
 name: Ride The Lightning (Core Lightning)
-version: "0.13.1-beta"
+version: "0.12.3"
 tagline: Mange your Core Lightning node with RTL
 description: >-
   This version of RTL is specifically configured to use your Core Lightning node.
