--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -40,7 +40,16 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  This update removes an outdated version of Loop that could lead to loss of funds. If you still wish to use Loop you can use the latest version in the Lightning Terminal app.
+  Liquidity Ads:
+
+  - UX improvements
+  
+  - Fix the issue of private channels being opened exclusively via Liquidity Ads
+
+
+  Other updates:
+    
+    - Multiple channels with the same peer now visible on the channels page
 path: ""
 defaultUsername: ""
 deterministicPassword: true
