Update release notes

--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -40,15 +40,15 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  Liquidity Ads:
+  - Events/day view for routing history report
 
-  - UX improvements
+  - Filtering non routing peers on routing page
 
-  - Fix the issue of private channels being opened exclusively via Liquidity Ads
+  - Invoice lookup feature
 
-
-  Other updates:
-    - Multiple channels with the same peer now visible on the channels page
+  - Circular rebalance infographics
+  
+  - Other bug fixes
 path: ""
 defaultUsername: ""
 deterministicPassword: true
