Add release notes

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -43,3 +43,11 @@ gallery:
   - 3.jpg
 path: ""
 deterministicPassword: true
+releaseNotes: >-
+  - Liquidity Ads interface for viewing ads, researching nodes and buying channels
+
+  - Liquidity Ads configuration to publish ads on the network
+
+  - Regtest support
+  
+  - Dashboard performance improvements
