Agora - Core Lightning RTL submitter info

--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -30,3 +30,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: Luke Childs
+submission: https://github.com/getumbrel/umbrel/pull/334
