--- a/bitfeed/umbrel-app.yml
+++ b/bitfeed/umbrel-app.yml
@@ -27,3 +27,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: mononaut
+submission: https://github.com/getumbrel/umbrel/pull/1202
