--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -29,3 +29,5 @@ gallery:
   - 4.jpg
 path: ""
 defaultPassword: ""
+submitter: Luke Childs
+submission: https://github.com/getumbrel/umbrel/pull/242
