--- a/file-browser/umbrel-app.yml
+++ b/file-browser/umbrel-app.yml
@@ -22,3 +22,5 @@ gallery:
 path: "/files/"
 deterministicPassword: false
 torOnly: false
+submitter: Steven Briscoe
+submission: https://github.com/getumbrel/umbrel-apps/pull/169
