--- a/invidious/umbrel-app.yml
+++ b/invidious/umbrel-app.yml
@@ -47,3 +47,5 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
+submitter: Jasper
+submission: https://github.com/getumbrel/umbrel-apps/pull/129
