--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -41,3 +41,5 @@ path: ""
 defaultUsername: umbrel
 defaultPassword: ""
 deterministicPassword: true
+submitter: Thebora Kompanioni
+submission: https://github.com/getumbrel/umbrel/pull/1216
