--- a/helipad/umbrel-app.yml
+++ b/helipad/umbrel-app.yml
@@ -19,3 +19,5 @@ gallery:
   - 3.jpg
 path: ""
 defaultPassword: ""
+submitter: Dave Jones
+submission: https://github.com/getumbrel/umbrel/pull/1174
