--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -64,3 +64,5 @@ releaseNotes: >-
   With 0.7.0 we replaced basic authentication with cookie-based authentication. Deterministic password is the same as before (see Umbrel app store).
 
   Full changelog can be found here: https://github.com/itchysats/itchysats/releases/tag/0.7.0
+submitter: Mariusz Klochowicz
+submission: https://github.com/getumbrel/umbrel/pull/1149
