--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -33,3 +33,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: rorp
+submission: https://github.com/getumbrel/umbrel/pull/984
