--- a/libreddit/umbrel-app.yml
+++ b/libreddit/umbrel-app.yml
@@ -31,3 +31,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: Jasper
+submission: https://github.com/getumbrel/umbrel-apps/pull/126
