--- a/ln-visualizer/umbrel-app.yml
+++ b/ln-visualizer/umbrel-app.yml
@@ -33,3 +33,5 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+submitter: Max Kotlan
+submission: https://github.com/getumbrel/umbrel-apps/pull/19
