--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -68,3 +68,5 @@ releaseNotes: >
 
   - 1.17.0 (2022-08-08)
     Added support for bos graph command
+submitter: Nitesh Balusu
+submission: https://github.com/getumbrel/umbrel-apps/pull/65
