--- a/nitter/umbrel-app.yml
+++ b/nitter/umbrel-app.yml
@@ -50,3 +50,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: Jasper
+submission: https://github.com/getumbrel/umbrel-apps/pull/128
