--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -55,3 +55,5 @@ releaseNotes: >-
 
   This release of Lightning Terminal (LiT) includes updates to the
   versions of the packaged subsystems including LND, Loop and Pool.
+submitter: Lounès Ksouri
+submission: https://github.com/getumbrel/umbrel/pull/348
