--- a/snowflake/umbrel-app.yml
+++ b/snowflake/umbrel-app.yml
@@ -24,3 +24,5 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+submitter: Luke Childs
+submission: https://github.com/getumbrel/umbrel/pull/1284
