--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -71,3 +71,5 @@ releaseNotes: >-
   - Bugfix: during loading: KeyError: 'blocks' #1859 (relativisticelectron)
   
   - And many other bugfixes...
+submitter: k9ert
+submission: https://github.com/getumbrel/umbrel/pull/339
