--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -34,3 +34,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: rorp
+submission: https://github.com/getumbrel/umbrel/pull/1147
