--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -33,3 +33,5 @@ releaseNotes: >-
   - Minor bugfixes
   
   - Full changelog can be found here: https://github.com/apotdevin/thunderhub/releases/tag/v0.13.16
+submitter: Anthony Potdevin
+submission: https://github.com/getumbrel/umbrel/pull/343
