--- a/transmission/umbrel-app.yml
+++ b/transmission/umbrel-app.yml
@@ -31,3 +31,5 @@ defaultPassword: ""
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
+submitter: Steven Briscoe
+submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
