--- a/sparkkiosk/umbrel-app.yml
+++ b/sparkkiosk/umbrel-app.yml
@@ -25,3 +25,5 @@ gallery:
 path: ""
 deterministicPassword: true
 torOnly: false
+submitter: jensgertsen
+submission: https://github.com/getumbrel/umbrel/pull/1312
