--- a/urbit-bitcoin-connector/umbrel-app.yml
+++ b/urbit-bitcoin-connector/umbrel-app.yml
@@ -34,3 +34,5 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+submitter: reid
+submission: https://github.com/getumbrel/umbrel/pull/1243
