Swap out Luke's and Steven's names

--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -30,5 +30,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Luke Childs
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/334
