--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -35,5 +35,5 @@ gallery:
   - 4.jpg
 path: ""
 defaultPassword: ""
-submitter: Luke Childs
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
