--- a/file-browser/umbrel-app.yml
+++ b/file-browser/umbrel-app.yml
@@ -22,5 +22,5 @@ gallery:
 path: "/files/"
 deterministicPassword: false
 torOnly: false
-submitter: Steven Briscoe
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/169
