--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -43,5 +43,5 @@ gallery:
   - 3.jpg
 path: ""
 deterministicPassword: true
-submitter: Luke Childs
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
