--- a/snowflake/umbrel-app.yml
+++ b/snowflake/umbrel-app.yml
@@ -24,5 +24,5 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
-submitter: Luke Childs
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1284
