--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -35,5 +35,5 @@ releaseNotes:  >-
   - Updated Onchain Wallet extension: connect our new open-source hardware wallet over serial! More info on https://lnbits.github.io/hardware-wallet/installer/.
 
   - More improvements to some extensions and bug fixes.
-submitter: Lounès Ksouri
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
