--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -52,5 +52,5 @@ releaseNotes: >-
 path: ""
 defaultUsername: ""
 deterministicPassword: true
-submitter: Lounès Ksouri
+submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/336
