Patch up org names

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -50,5 +50,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Reckless_Satoshi
+submitter: RoboSats
 submission: https://github.com/getumbrel/umbrel-apps/pull/122
