--- a/ipfs-podcasting/umbrel-app.yml
+++ b/ipfs-podcasting/umbrel-app.yml
@@ -22,5 +22,5 @@ gallery:
 - 3.jpg
 path: ''
 defaultPassword: ''
-submitter: Cameron
+submitter: IPFSPodcasting.net
 submission: https://github.com/getumbrel/umbrel/pull/1356
