Correct Jam and Kollider

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -41,5 +41,5 @@ path: ""
 defaultUsername: umbrel
 defaultPassword: ""
 deterministicPassword: true
-submitter: Thebora Kompanioni
+submitter: JoinMarket WebUI Organisation
 submission: https://github.com/getumbrel/umbrel/pull/1216
