--- a/kollider/umbrel-app.yml
+++ b/kollider/umbrel-app.yml
@@ -30,5 +30,5 @@ gallery:
 path: ""
 deterministicPassword: true
 torOnly: false
-submitter: Kevin Cai
+submitter: Kollider
 submission: https://github.com/getumbrel/umbrel/pull/1221
