Patch up other using org. names

--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -33,5 +33,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: rorp
+submitter: SuredBits
 submission: https://github.com/getumbrel/umbrel/pull/984
