--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -34,5 +34,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: rorp
+submitter: Suredbits
 submission: https://github.com/getumbrel/umbrel/pull/1147
