--- a/sparkkiosk/umbrel-app.yml
+++ b/sparkkiosk/umbrel-app.yml
@@ -25,5 +25,5 @@ gallery:
 path: ""
 deterministicPassword: true
 torOnly: false
-submitter: jensgertsen
+submitter: Jens Gertsen
 submission: https://github.com/getumbrel/umbrel/pull/1312
