--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -29,5 +29,5 @@ gallery:
   - 3.jpg
 path: ""
 deterministicPassword: true
-submitter: kibotrel
+submitter: LN Markets
 submission: https://github.com/getumbrel/umbrel/pull/879
