--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -30,5 +30,5 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
-submitter: Oren Zomer
-submission: https://github.com/getumbrel/umbrel/pull/958
+submitter: Umbrel
+submission: https://github.com/getumbrel/umbrel-apps/pull/38
