Patch up Sphinx relay

--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -29,5 +29,5 @@ gallery:
 path: /connect
 defaultUsername: ""
 defaultPassword: ""
-submitter: Gonzalo Aune
+submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
