Patch up urbit-bitcoin-connector

--- a/urbit-bitcoin-connector/umbrel-app.yml
+++ b/urbit-bitcoin-connector/umbrel-app.yml
@@ -34,5 +34,5 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
-submitter: reid
+submitter: ~sitful-hatred
 submission: https://github.com/getumbrel/umbrel/pull/1243
