Add `submitter` and `submission` metadata for all apps (#182)
Co-authored-by: Mayank Chhabra <mayank@umbrel.com>
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -41,3 +41,5 @@ path: ""
 defaultUsername: umbrel
 defaultPassword: ""
 deterministicPassword: true
+submitter: JoinMarket WebUI Organisation
+submission: https://github.com/getumbrel/umbrel/pull/1216
