--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -52,3 +52,5 @@ releaseNotes: >-
 path: ""
 defaultUsername: ""
 deterministicPassword: true
+submitter: Umbrel
+submission: https://github.com/getumbrel/umbrel/pull/336
