--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -33,3 +33,5 @@ defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
   Change web UI port from 3005 to 3021
+submitter: Umbrel
+submission: https://github.com/getumbrel/umbrel/pull/461
