--- a/woofbot/umbrel-app.yml
+++ b/woofbot/umbrel-app.yml
@@ -25,3 +25,5 @@ releaseNotes: >-
   - Bugfix: Handling transaction ids that are not yet in the mempool
 
   - UX: Removing short commands. When commands are called without parameters the user is asked to fill them in a reply message.
+submitter: WoofBotApp
+submission: https://github.com/getumbrel/umbrel-apps/pull/28
