--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -50,3 +50,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: RoboSats
+submission: https://github.com/getumbrel/umbrel-apps/pull/122
