--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -31,3 +31,5 @@ releaseNotes: >
   - Fix IPv6-mapped-IPv4 addresses in STUN responses
 
   - Better container detection
+submitter: Umbrel
+submission: https://github.com/getumbrel/umbrel/pull/1248
