--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -32,5 +32,5 @@ path: /launch
 defaultUsername: umbrel
 deterministicPassword: true
 torOnly: false
-submitter: mopfel-winrux
+submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
