Add release notes to CLN

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -37,3 +37,5 @@ path: ""
 defaultPassword: ""
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
+releaseNotes: >-
+  - Update RESTful API to add support for Liquidity Ads
