--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3001
   
   web:
-    image: bitcoinscala/oracle-server-ui:1.9.4@sha256:7f5213536a5f98f74abba64aaa6275dbb15d94bbb98511f2c13b2b360010d2bb
+    image: bitcoinscala/oracle-server-ui:1.9.5
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -28,7 +28,7 @@ services:
       - oracleserver
   
   oracleserver:
-    image: bitcoinscala/bitcoin-s-oracle-server:1.9.4@sha256:844db1c6fd314dfc37d928b76e886ea124419c36f0d4e06952e35776adeabe06
+    image: bitcoinscala/bitcoin-s-oracle-server:1.9.5
     entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
     user: "1000:1000"
     restart: on-failure
