Update release notes

--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: suredbits-wallet
 category: Finance
 name: Suredbits Wallet
-version: "1.9.4"
+version: "1.9.5"
 tagline: A universal DLC wallet
 description: >-
   The Suredbits Wallet is your one stop shop for building Discreet
@@ -14,11 +14,7 @@ description: >-
 
   WARNING: This is an Alpha software, don't put too much money in.
 releaseNotes: >
-  - Adds connection checks for tor
-
-  - Add bug fixes for the dlc wallet
-
-  - Optimize startup time for the app
+  - Implement websocket events for filter headers / filters.
 
 developer: Suredbits
 website: https://suredbits.com
