--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3001
   
   web:
-    image: bitcoinscala/oracle-server-ui:1.9.5
+    image: bitcoinscala/oracle-server-ui:1.9.5@sha256:30f289d5d885f3eecb6744abc2ddc3d24e44816771baacfbb9646228f71615f5
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -28,7 +28,7 @@ services:
       - oracleserver
   
   oracleserver:
-    image: bitcoinscala/bitcoin-s-oracle-server:1.9.5
+    image: bitcoinscala/bitcoin-s-oracle-server:1.9.5@sha256:a08b8c429560e1dea99fb6f6d5492e88e89a97538f546720868b284bc93f56f4
     entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
     user: "1000:1000"
     restart: on-failure
