--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -21,6 +21,11 @@ services:
       TDEX_OPERATOR_LISTENING_PORT: 9090
       TDEX_TRADE_LISTENING_PORT:  9090
       TDEX_NO_OPERATOR_TLS: "true"
+      # these vars are used to generate the connect URL
+      # we assume to always show the external endpoint
+      # reachable remotely by other dashboards via Tor
+      TDEX_CONNECT_ADDR: "$APP_HIDDEN_SERVICE"
+      TDEX_CONNECT_PROTO: http
 
   dashboard:
     image: ghcr.io/tdex-network/dashboard:v0.1.39@sha256:4888ec6f1baa2244d068edbb0b0d532f67399cfef838ab3fe536b8c4280cd036
