Patchup a few things

--- a/tdex/caddy-data/Caddyfile
+++ b/tdex/caddy-data/Caddyfile
@@ -1,6 +1,7 @@
-:3030 {
-  reverse_proxy dashboard:8080
+:8080 {
 	handle_path /api/* {
-		reverse_proxy tdexd:9090
+		reverse_proxy tdex_tdexd_1:9090
 	}
+
+	reverse_proxy tdex_dashboard_1:8080
 }
