--- a/tdex/torrc.template
+++ b/tdex/torrc.template
@@ -1,7 +1,7 @@
 # TDEX Public Trader Interface Hidden Service
-HiddenServiceDir /tdex-data/app-$APP_ID-daemon
-HiddenServicePort $APP_TDEXD_PORT $APP_TDEXD_IP:$APP_TDEXD_PORT
+HiddenServiceDir /data/app-$APP_ID-daemon
+HiddenServicePort 9090 tdex_tdexd_1:9090
 
 # Dashboard Frontend Hidden Service
-HiddenServiceDir /tdex-data/app-$APP_ID-dashboard
+HiddenServiceDir /data/app-$APP_ID
 HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
