Point app proxy to caddy

--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   app_proxy:
     environment:
-      APP_HOST: tdex_dashboard_1
+      APP_HOST: tdex_caddy_1
       APP_PORT: 8080
   
   tdexd:
