--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -26,11 +26,12 @@ services:
       TDEX_CONNECT_PROTO: http
 
   dashboard:
-    image: ghcr.io/tdex-network/dashboard:v0.1.40@sha256:3cce20b17556bc6740cc1724d17c7062f59133774256e459bfd625ea1a22f7c6
+    image: ghcr.io/tdex-network/dashboard:v0.1.41@sha256:8c21afc39b9bcad02724ed084e4540c60b3ae04c1f085a06f854f1e0dcb857cb
     restart: on-failure
     environment:
       USE_PROXY: "false"
       IS_PACKAGED: "true"
+      TRADER_HIDDEN_SERVICE:  "$APP_TDEX_TRADER_HIDDEN_SERVICE"
   
   caddy:
     image: caddy:2.6.1-alpine@sha256:21dbf9101c1eae0e2228f386eefab509d462710c2da97ba45d61c083f3e74fc1
