remove CONNECT_ADDR

--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       # these vars are used to generate the connect URL
       # we assume to always show the external endpoint
       # reachable remotely by other dashboards via Tor
-      TDEX_CONNECT_ADDR: "$APP_HIDDEN_SERVICE"
-      TDEX_CONNECT_PROTO: http
+      #TDEX_CONNECT_ADDR: "$APP_HIDDEN_SERVICE"
+      #TDEX_CONNECT_PROTO: http
 
   dashboard:
     image: ghcr.io/tdex-network/dashboard:v0.1.41@sha256:8c21afc39b9bcad02724ed084e4540c60b3ae04c1f085a06f854f1e0dcb857cb
