--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -19,7 +19,7 @@ releaseNotes: >-
 
   - Randomize mandatory fee config values on restarts
 
-  - Show sum of selected utxos in Jar details view
+  - Show sum of selected UTXOs in Jar details view
 
   - Display transaction ID on successful direct-send
 developer: JoinMarket WebUI Organisation
