--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -15,10 +15,14 @@ services:
       - ${APP_DATA_DIR}/tdex-data:/home/tdex/.tdex-daemon
     environment:
       TDEX_LOG_LEVEL: 5
-      TDEX_EXPLORER_ENDPOINT: https://liquid.network/liquid/api
       TDEX_OPERATOR_LISTENING_PORT: 9090
       TDEX_TRADE_LISTENING_PORT:  9090
       TDEX_NO_OPERATOR_TLS: "true"
+      # these vars are used to generate the connect URL
+      # we assume to always show the external endpoint
+      # reachable remotely by other dashboards via Tor
+      TDEX_CONNECT_ADDR: "$APP_HIDDEN_SERVICE"
+      TDEX_CONNECT_PROTO: http
     
   dashboard:
     image: ghcr.io/tdex-network/dashboard:v0.1.42@sha256:bda1bd0ac14f8d1466e83ba5c8148cede77f16e7606f50aefa22c7fd3d9fd7a9
