Update Jam to v0.1.1 (#186)
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jam
 category: Finance
 name: Jam
-version: "0.1.0"
+version: "0.1.1"
 tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -13,19 +13,15 @@ description: >-
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
 releaseNotes: >-
-  - Update application flow to align with recent scheduler changes
+  - Basic fee settings
 
-  - New top-level menu item: Sweep
+  - Display fee summary on Send page
 
-  - Show active offers directly in Jam
+  - Randomize mandatory fee config values on restarts
 
-  - Highlight your offers in the in-app Orderbook
+  - Show sum of selected UTXOs in Jar details view
 
-  - Easier debugging: retrieve JoinMarket logs directly in Jam
-
-  - Abort a collaborative transaction as a taker
-
-  - And last but not least: we added some flavor! Jars are now named and colored
+  - Display transaction ID on successful direct-send
 developer: JoinMarket WebUI Organisation
 website: https://jamapp.org
 dependencies:
